# ignis

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/classfile/: attributes.rs  constant_pool.rs  fields.rs  methods.rs  mod.rs
src/vm/: instructions.rs  mod.rs
src/vm/interpreter/: executor.rs  instructions.rs  mod.rs  stack.rs  static_method.rs
src/vm/interpreter/instructions/: comparisons.rs  constants.rs  conversions.rs  loads.rs  math.rs  mod.rs  opcode.rs  stack.rs  stores.rs
src/vm/runtime/: heap.rs  method_area.rs  mod.rs
tests/: classfile.rs  vm.rs
tests/sources/: Person.java
